force-app/main/default/objects/Allocation_Details__c/Allocation_Details__c.object-meta.xml
<CustomObject>
    <label>Allocation Details</label>
    <nameField>
        <displayFormat>AD-{0}</displayFormat>
        <label>Allocation Week</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>