force-app/main/default/objects/Allocation_Details__c/fields/Allocation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Hours__c</fullName>
    <label>Allocation Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>