force-app/main/default/objects/Allocation_Details__c/fields/Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage__c</fullName>
    <formula>Allocation_Hours__c /40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>