force-app/main/default/objects/Allocation_Details__c/fields/Day_Year__c.field-meta.xml
<CustomField>
    <fullName>Day_Year__c</fullName>
    <formula>Year_of_Month__c &amp;&#39;-&#39;&amp; TEXT( Start_Date_of_the_Week__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day &amp; Year</label>
    <type>Text</type>
</CustomField>