force-app/main/default/objects/Allocation_Details__c/fields/Employee_Allocation_Details__c.field-meta.xml
<CustomField>
    <fullName>Employee_Allocation_Details__c</fullName>
    <label>Employee Allocation Details</label>
    <referenceTo>Employee_Allocation__c</referenceTo>
    <relationshipLabel>Allocation Details</relationshipLabel>
    <relationshipName>Allocation_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>