force-app/main/default/objects/Allocation_Details__c/fields/Planned_Vocation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Vocation_Hours__c</fullName>
    <label>Planned Vocation Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>