force-app/main/default/objects/Allocation_Details__c/fields/Release_Month__c.field-meta.xml
<CustomField>
    <fullName>Release_Month__c</fullName>
    <formula>Employee_Allocation_Details__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Allocation Start Month</label>
    <type>Date</type>
</CustomField>