force-app/main/default/objects/Allocation_Details__c/fields/Start_Date_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_the_Week__c</fullName>
    <formula>DAY(IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=0, 
Weekly_Start_Date__c,/*Monday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=1, 
Weekly_Start_Date__c-1,/*Tuesday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=2, 
Weekly_Start_Date__c-2,/*Wednesday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=3, 
Weekly_Start_Date__c-3,/*Thursday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=4, 
Weekly_Start_Date__c-4,/*Friday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=5, 
Weekly_Start_Date__c-5,/*Saturday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=6, 
Weekly_Start_Date__c-6,/*Sunday*/ 

DATE(1878,1,1)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date of the Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>