force-app/main/default/objects/Allocation_Details__c/fields/Vacation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vacation Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>